                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 03-09-2004 fixed: SMB did not handle files with non ASCII names properly (got NT_OBJECT_NOT_FOUND)
  - 03-09-2004 fixed: eliminate crash that occurs when loading wma files which have non ASCII characters in its tags
  - 02-09-2004 fixed: eliminate crash that occurs when loading m3u which have weird characters
  - 02-09-2004 added: grouping of controls
  - 02-09-2004 added: virtual keyboard now supports data entry with the numbers just like a cell phone. Also pressing "back" is same as backspace.
  - 02-09-2004 added: network settings in the GUI and remove them from XBoxMediaCenter.xml
  - 29-08-2004 added: applied patch for LCD-MOD contrast changes with minor modification.
  - 28-08-2004 changed: removed the need to restart because of audio channel mappings
  - 28-08-2004 changed: removed the need to restart because of hw ac3/dts output
  - 28-08-2004 added: proper downmixing of more than 2 channel sources to dolby surround on the stereo output
  - 25-08-2004 updated: polish language file (thanks napek)
  - 25-08-2004 changed: volumebar resources are allocated at startup to avoid hd spinup during movie
  - 25-08-2004 fixed: ac3/dts settings were reset to disabled on application stop
  - 24-08-2004 added: my music playlist: Showing progress dialog if loading takes more the 1,5 secs.
  - 24-08-2004 fixed: my video: directory history for virtual directory was broken
  - 24-08-2004 fixed: album info from allmusic.com
  - 23-08-2004 fixed: Fan was always set to custom mode even if tempcontrol and fanspeed were both disabled
  - 23-08-2004 updated: Spanish string.xml (thnx ezar2003)